# GriffonAV

./: .gitignore  Cargo-docker.toml  Cargo.toml  G-EIP-700_beta_test_plan.md  README.md  justfile
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: ci.yml  full-sync-issue-main.yml  mirror-to-epitech-repo.yml  mirror-to-website-repo.yml  sync-issues.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/cli/: mod.rs
client/: package.json
core/: Cargo.toml
core/src/: lib.rs
core/src/module/: module.rs  registry.rs
daemon/: Cargo.toml
daemon/daemon/: Cargo.toml
daemon/daemon/src/: main.rs
daemon/interface/src/: lib.rs
daemon/plugin_test/: Cargo.toml
daemon/plugin_test/src/: lib.rs
daemon/plugin_test_2/: Cargo.toml
daemon/plugin_test_2/src/: lib.rs
daemon/src/: main.rs
docker/: daemon.Dockerfile
docs/: ConventionalCommitMessages.md  ProjectStructure.md  githubProject.md  gui.md
gui/: README.md  justfile  package-lock.json  package.json  tsconfig.json  vite.config.ts
gui/src/: App.css  App.tsx  index.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: main.rs
gui/src/components/: search.tsx  sidebar.tsx  title-bar.tsx
gui/src/hooks/: usePlugins.ts
performance-analysys/grafana/: docker-compose.yml
performance-analysys/grafana/data/: reporting.sqlite
performance-analysys/grafana/sql/: schema.sql  seed.sql
performance-analysys/metabase/: docker-compose.yml
plugin_manager/: plugin-guide.md
plugin_manager/interface/: Cargo.toml
plugin_manager/ipc_protocol/: Cargo.toml  ipc-protocol.md
plugin_manager/plugin_manager/: Cargo.toml
plugin_manager/runner/: Cargo.toml
plugins/Scanner/: .gitignore  Cargo.toml
plugins/cleaner/: Cargo.toml
plugins/griffon_cleaner/: Cargo.toml
plugins/griffon_cleaner/src/: config.rs  context.rs  lib.rs  main.rs  reports.rs  runner.rs
plugins/griffon_cleaner/src/modules/: cache.rs  logs.rs  mod.rs
plugins/plugin_test/: Cargo.toml
plugins/plugin_test_2/: Cargo.toml
plugins/scanner/: Cargo.toml  justfile
plugins/scanner/archive/: engine.rs  prepareyaraforge.rs
plugins/scanner/src/: file_class.rs  lib.rs  main.rs
plugins/scanner/src/file_context/: mod.rs
plugins/scanner/src/rules/: mod.rs  rule_splitter.rs
plugins/scanner/src/rules_engine/: mod.rs  rule_index.rs  rule_key.rs  rule_loader.rs  rule_parser.rs  rules_engine.rs
plugins/scanner/src/scanner_engine/: mod.rs  scan_match.rs  scan_report.rs  scanner_engine.rs
proto-yara-x/: Cargo.toml
proto-yara-x/dummy-files/: test.rs
proto-yara-x/src/: main.rs
services/core/: Cargo.toml
services/stan/: Cargo.toml
shared/plugin_rules/: Cargo.toml
shared/seshat/: Cargo.toml
shared/thoth/: Cargo.toml
staticAnalysis/: .gitignore  Cargo.toml
staticAnalysis/src/: lib.rs  main.rs
static_analysis/: .gitignore  Cargo.toml  README.md  justfile
static_analysis/benches/: engine_bench.rs  scan_bench.rs
static_analysis/src/: lib.rs  main.rs
static_analysis/tools/: prepare.rs
website/: docusaurus.config.ts  package-lock.json
website/blog/: 2025‐10‐22_TECH_001_libyara.md  2025‐11‐11_TECH_003_fileTriage.md  2025‐22‐10_TECH_001_libyara.md  2025‐23‐10_ORGA_002_consta.md  2026‐04‐01_TECH_004_metrics.md  tags.yml
(+35 files in other folders)
