[workspace]
members = ["gui/src-tauri", "core", "cli", "daemon", "plugin_manager/interface", "plugins/plugin_test", "plugins/plugin_test_2", "plugin_manager/runner", "plugin_manager/plugin_manager"]
exclude = ["static_analysis"]
resolver = "2"


[workspace.dependencies]
# Shared dependencies across the workspace
# No one yet

# Testing dependencies
mockall = "0.12"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
