[workspace]
members = [
    "cli", "daemon", "shared/plugin_rules", "plugins/plugin_test", "plugins/plugin_test_2", "plugin_manager/runner", "plugin_manager/plugin_manager"
, "shared/ipc_protocol", "shared/seshat"] #"gui/src-tauri" as been remove for test and work
resolver = "2"

[workspace.dependencies]
# Shared dependencies across the workspace
# No one yet
plugin_manager = { path = "plugin_manager/plugin_manager" }
plugin_rules = { path = "shared/plugin_rules" }
ipc_protocol = { path = "shared/ipc_protocol" }

# Testing dependencies
mockall = "0.12"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
