[package]
name = "griffon_cleaner"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2.5.0"
thiserror = "2.0.17"
plugin_rules = { workspace = true }
abi_stable = { workspace = true }
thoth = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
crate-type = ["cdylib"]