[package]
name = "scanner"
version = "0.1.0"
edition = "2024"

default-run = "scanner"

[[bin]]
name = "prepare"
path = "tools/prepare.rs"

[[bin]]
name = "scanner"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
env_logger = "0.11.8"
log = "0.4.28"
rand = "0.9.2"
regex = "1.12.2"
yara-x = { git = "https://github.com/VirusTotal/yara-x" }
walkdir = "2"
reqwest = { version = "0.12.28", features = ["blocking"] }
zip = "7.0.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "engine_bench"
harness = false
